same bug mobile view shadows on home page/ alignment --attmept fix

--- a/public/styles.css
+++ b/public/styles.css
@@ -430,6 +430,11 @@ footer a:hover {
 }
 
 @media (max-width: 470px) {
+    .banner-bottom {
+        text-shadow: none;
+        bottom: 40%;
+        left:inherit;
+    }
     .banner-home {
         text-align: center;
     }
